# Hawkes-On

./: .gitignore  LICENSE  README.md  pyproject.toml
onhawkes/: __init__.py  estimator.py
