[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "onhawkes"
version = "0.1.0"
authors = [
    { name="Aoi"},
]
description = "A simple library for online Hawkes process intensity estimation"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy", "scipy"
]
